2000-04-12  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10695: Completion/Core/_files, Completion/Core/_tags,
 	Doc/Zsh/compsys.yo: allow brace expansion on patterns for
 	file-patterns and tag-order
	
	* 10692: Src/builtin.c: missing initialisation for next field in
 	assignments for substitutions for fc builtin

	* 10691: Completion/Core/_main_complete, Completion/Core/_oldlist:
 	keep _oldlist from using the dummy match inserted for warnings
	
	* 10690: Doc/Zsh/compwid.yo, Src/Zle/compcore.c, Src/Zle/compctl.c,
 	Src/Zle/compresult.c: comment out the code to allow
 	$compstate[insert] to select the group
	
	* 10686: Src/Zle/compresult.c, Src/Zle/zle_tricky.c: display
 	number of lines instead of number of matches when asking whether
 	to show completion lists
	
	* 10685: Doc/Zsh/zle.yo, Src/hist.c, Src/Modules/parameter.c,
 	Src/Zle/iwidgets.list, Src/Zle/zle_misc.c: new widget
 	copy-prev-shell-word, like copy-prev-word but uses shell parsing
 	to find word
	
2000-04-11  Clint Adams  <schizo@debian.org>

	* 10680: Completion/User/_diff_options: spelling corrections.

2000-04-11  Peter Stephenson  <pws@pwstephenson.fsnet.co.uk>

	* 10669: Completion/Core/compinstall:  will now ask for
	alternative files both for input and output.

2000-04-11  Bart Schaefer  <schaefer@zsh.org>

	* 10681: Completion/Commands/_complete_help: Setopts the same
	as _main_complete.

	* 10657: Completion/User/_make: One change missed in 10635.

	* Functions/Prompts/prompt_bart_setup: No-op cleanup.

2000-04-11  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>

	* 10650: Completion/Core/_files: make trailing blanks in
 	file-patterns tags be removed
	
	* 10648: Completion/Core/_oldlist: make _oldlist ignore old list
 	when _complete_help is used
	
	* 10641: Completion/Core/_approximate, Completion/Core/_match,
 	Completion/Core/_oldlist: make _oldlist ignore list from
 	_complete_help; _match runs for every match spec from