@@ -1,5 +1,8 @@
 2000-04-12  Sven Wischnowsky <wischnow@informatik.hu-berlin.de>
 
+	* 10699: Src/parse.c, Src/zsh.h: compare mapped zwc files using
+ 	stat instead of the pathnames
+	
 	* 10695: Completion/Core/_files, Completion/Core/_tags,
  	Doc/Zsh/compsys.yo: allow brace expansion on patterns for
  	file-patterns and tag-order
